@@ -159,13 +159,14 @@ BEGIN
                     BS_AUTORADIOBUTTON,13,112,123,10
     CONTROL         "&Revision",IDC_REVISION_N,"Button",BS_AUTORADIOBUTTON,
                     13,128,74,10
-    EDITTEXT        IDC_REVISION_NUM,100,127,136,14,ES_AUTOHSCROLL | 
+    EDITTEXT        IDC_REVISION_NUM,100,127,121,14,ES_AUTOHSCROLL | 
                     WS_DISABLED
     DEFPUSHBUTTON   "&OK",IDOK,129,156,50,14
     PUSHBUTTON      "&Cancel",IDCANCEL,189,156,48,14
     PUSHBUTTON      "&Help",IDHELP,243,156,50,14
     CONTROL         "Omit externals",IDC_NOEXTERNALS,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,13,82,274,10
+    PUSHBUTTON      "Show &Log",IDC_SHOW_LOG,237,126,50,14
 END
 
 IDD_COPY DIALOGEX 0, 0, 300, 291
